# sarracen

./: .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/linters/: .flake8
.github/workflows/: joss_paper.yml  lint_prs.yaml
docs/: api.rst  conf.py  contributing.rst  exactsolutions.rst  examples.rst  index.rst  installation.rst  interpolation.rst  io.rst  kernels.rst  quick-start.rst  render.rst  requirements.txt  sarracen.rst
docs/examples/: dustydisc.rst  k3d.rst  ot.rst
docs/paper/: paper.bib  paper.md
sarracen/: __init__.py  _atomic_operations.py  interpolate.py  kernels.py  render.py  sarracen_dataframe.py  sarracen_series.py
sarracen/backends/: __init__.py  base_backend.py  cpu_backend.py  gpu_backend.py
sarracen/disc/: __init__.py  surface_density.py  utils.py
sarracen/dust/: __init__.py  stokes_number.py
sarracen/interpolate/: __init__.py  base_backend.py  cpu_backend.py  gpu_backend.py  interpolate.py
sarracen/io/: marisaio.py  read_csv.py  read_marisa.py
sarracen/kernels/: __init__.py  base_kernel.py  cubic_spline.py  cubic_spline_exact.py  quartic_spline.py  quintic_spline.py
sarracen/ptmass/: __init__.py  sinks.py
sarracen/readers/: read_csv.py  read_gasoline.py  read_gradsph.py  read_marisa.py  read_phantom.py  read_phantom_ev.py  read_shamrock.py  read_shamrock_vtk.py  read_vtk.py
sarracen/tests/: test_interpolate.py  test_kernels.py  test_render.py  test_sarracen_dataframe.py
sarracen/tests/disc/: test_angular_momenta.py  (+2 more)
sarracen/writers/: write_phantom.py
(+10 files in other folders)
